# saifguard

./: README.md
notebooks/: adk.ipynb  dashboard.ipynb
src/: .env  README.md  app.py  front.py  pyproject.toml
src/models/: query_request.py  vulnerability.py
src/saifguard/: agent.py  analysis_tool.py  config.py  gcp_project_tool.py  google_search_tool.py
